--- a/client/src/app/components/form/radio/radio.component.html
+++ b/client/src/app/components/form/radio/radio.component.html
@@ -1,6 +1,6 @@
 <div class="w-full">
   <label *ngIf="label" class="block mb-2 text-sm font-medium text-gray-700 dark:text-gray-200">{{ label }}<span *ngIf="required" class="text-red-500">*</span></label>
-  <div class="flex flex-col gap-2">
+  <div [ngClass]="horizontal ? 'flex flex-row gap-16' : 'flex flex-col gap-2'">
     <label *ngFor="let opt of options" class="inline-flex items-center cursor-pointer">
       <input
         type="radio"
