Change the weekly availability component according to new requirements
Add Ngx Material time stamp for setting time.
Remove shifts per day.
Add time stamp for each day so that user can select it's availability

--- a/client/src/app/pages/guard-setting/guard-setting.component.html
+++ b/client/src/app/pages/guard-setting/guard-setting.component.html
@@ -147,6 +147,7 @@
                 </div>
                 <app-weekly-availability label="Weekly Availability" name="availability"
                     [(ngModel)]="guardFormModel.weeklyAvailability"></app-weekly-availability>
+                <app-error-message [errorMessage]="guardErrors.availability"></app-error-message>
             </section>
 
             <div *ngIf="guardErrors.submit"
